# isa_simulator

./: Cargo.toml  README.md
code/: ctf  matrix_mul  mem_demo  mem_prot_demo  sorting
docs/: .questions.md.un~  final.md  isa_reference.md  notes.md  questions.md  questions.md~
src/: cpu.rs  gui.rs  lib.rs  main.rs  mmu.rs  pipeline.rs  simulator.rs
